tests/snapshots/git_error_display__detached_head_no_action.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mNot on a branch (detached HEAD)[39m

💡 [2mSwitch to a branch first with [22mgit switch <branch>
