tests/snapshots/git_error_display__hook_command_failed_with_name.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mpre-merge command failed: [1mtest[22m: exit code 1[39m

💡 [2mUse [90m--no-verify[39m to skip pre-merge commands[22m
