tests/snapshots/git_error_display__hook_command_failed_without_name.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mpost-create command failed: command not found[39m

💡 [2mUse [90m--no-verify[39m to skip post-create commands[22m
