tests/snapshots/git_error_display__llm_command_failed.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mCommit generation command failed[39m
[107m [0m  Error: API key not found

⚪ Ran command:
[107m [0m  llm --model claude
