tests/snapshots/git_error_display__no_worktree_found.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mNo worktree found for branch [1mnonexistent[39m[22m
