tests/snapshots/git_error_display__not_fast_forward_merge_context.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mCan't push to local [1mmain[22m branch: it has newer commits[39m
[107m [0m  abc1234 New commit on main

💡 [2mRun [22mwt merge[2m again to incorporate these changes[22m
