tests/snapshots/git_error_display__not_interactive.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mCannot prompt for approval in non-interactive environment[39m

💡 [2mIn CI/CD, use [22m--force[2m to skip prompts. To pre-approve commands, use [22mwt config approvals add
